Bug #30768 query cache patch for bug #21074 crashes on windows

"pthread_mutex_trylock" isn't implemented correctly for the Windows platform.

This temporary patch reverts the patch for bug#21074 for Windows until
pthread_mutex_trylock is properly implemented.